tests/PhiCore/compile_failure/src/core/flat_ptr/not_null_assign_nullptr.fail.cpp
#include <phi/core/flat_ptr.hpp>

int main()
{
    int                    i = 16;
    phi::not_null_flat_ptr ptr(&i);

    ptr = nullptr;
}
